--- a/E_Kotlin/Projects/AndroidStudio/FirstProject/app/src/main/res/layout/activity_main.xml
+++ b/E_Kotlin/Projects/AndroidStudio/FirstProject/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,43 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.118" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="116dp"
+        android:text="@string/text_no"
+        android:textAlignment="center"
+        android:textColor="#673AB7"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/music_cb"
+        android:layout_width="128dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="40dp"
+        android:text="@string/check_music"
+        app:layout_constraintBottom_toTopOf="@+id/sport_cb"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/sport_cb"
+        android:layout_width="127dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="100dp"
+        android:text="@string/check_sport"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
