--- a/E_Kotlin/Projects/AndroidStudio/FirstProject/app/src/main/res/layout/activity_main.xml
+++ b/E_Kotlin/Projects/AndroidStudio/FirstProject/app/src/main/res/layout/activity_main.xml
@@ -6,61 +6,56 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:lineSpacingExtra="8sp"
-        android:text="Hello World!"
-        android:textAlignment="center"
-        android:textColor="#3F51B5"
-        android:textSize="96sp"
-        android:textStyle="italic"
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="247dp"
+        android:onClick="change"
+        android:text="@string/change_activity"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.118" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="116dp"
-        android:text="@string/text_no"
-        android:textAlignment="center"
-        android:textColor="#673AB7"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <CheckBox
-        android:id="@+id/music_cb"
-        android:layout_width="128dp"
-        android:layout_height="58dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/check_music"
-        app:layout_constraintBottom_toTopOf="@+id/sport_cb"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="218dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="48dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
 
-    <CheckBox
-        android:id="@+id/sport_cb"
-        android:layout_width="127dp"
+    <EditText
+        android:id="@+id/editTextEmailAddress"
+        android:layout_width="320dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="100dp"
-        android:text="@string/check_sport"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:layout_marginBottom="50dp"
+        android:autofillHints="emailAddress"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
+        tools:layout_editor_absoluteX="42dp" />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:autofillHints="password"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="448dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
