--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/drawable/back_correct_letter_night.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/drawable/back_correct_letter_night.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#6d0100"
-        android:endColor="#a90100"
+        android:startColor="@color/correctLetterNight"
+        android:endColor="@color/correctLetterBlondedNight"
         android:angle="0" />
     <corners android:radius="1000dp" />
-    <stroke android:color="@color/secondary"
+    <stroke android:color="@color/secondaryNight"
         android:width="2dp"/>
 </shape>
