--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/item_player.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/item_player.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:background="@drawable/back_secondary"
+    style="@style/back_secondary"
     android:padding="20dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/back_item"
+        style="@style/back_item"
         android:orientation="horizontal">
 
         <ImageView
@@ -25,7 +25,7 @@
         <View
             android:layout_width="5dp"
             android:layout_height="match_parent"
-            android:background="@drawable/secondary_grad"/>
+            style="@style/secondary_grad"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
@@ -39,18 +39,16 @@
                 android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:fontFamily="cursive"
                 android:padding="20dp"
                 android:text="@string/Default_text"
                 android:textAlignment="center"
-                android:textColor="@color/textPrimary"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                style="@style/text_view_mainTitle"
+                android:textSize="25sp"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:background="@drawable/secondary_grad"/>
+                style="@style/secondary_grad"/>
 
             <TextView
                 android:id="@+id/score"
@@ -62,9 +60,8 @@
                 android:padding="20dp"
                 android:paddingHorizontal="40dp"
                 android:text="@string/Default_text"
-                android:textColor="@color/textPrimary"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                style="@style/text_view_extra"
+                android:textSize="20sp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
