--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/drawable/back_letter_night.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/drawable/back_letter_night.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#008300"
-        android:endColor="#00a800"
+        android:startColor="#7A148C"
+        android:endColor="#BB2DD3"
         android:angle="0" />
     <corners android:radius="1000dp" />
-    <stroke android:color="@color/secondary"
+    <stroke android:color="@color/secondaryNight"
         android:width="2dp"/>
 </shape>
