--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/activity_data.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/activity_data.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/icon_background"/>
+        style="@style/primary_grad"/>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
