--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/default_bottom_bar.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/default_bottom_bar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@drawable/secondary_grad"
+    style="@style/secondary_grad"
     android:elevation="4dp"
     android:paddingHorizontal="10dp">
 </androidx.appcompat.widget.Toolbar>
