--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/diccionary_popup.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/diccionary_popup.xml
@@ -2,32 +2,31 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="500dp"
-    android:background="@drawable/icon_background"
+    style="@style/primary_grad"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/secondary_grad"
+        style="@style/secondary_grad"
         android:orientation="horizontal">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="6"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/jetbrains_mono_thin"
             android:text="@string/palabras"
             android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="40sp"
+            style="@style/text_view_popup_title"
             android:paddingVertical="20dp"/>
         <ImageButton
             android:id="@+id/cancelButton"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="55dp"
             android:src="@drawable/quit"
             android:scaleType="fitCenter"
-            android:background="@drawable/transparent"
+            android:background="@drawable/back_secondary"
             android:contentDescription="@string/contentDescriptionCancelPopup" />
     </LinearLayout>
 
