--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/game_bottom_bar.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/game_bottom_bar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@drawable/secondary_grad"
+    style="@style/secondary_grad"
     android:elevation="4dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
