--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/tool_bar.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/tool_bar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@drawable/secondary_grad"
+    style="@style/secondary_grad"
     android:elevation="4dp">
 
     <LinearLayout
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.3">
+            android:layout_weight="0.2">
 
             <ImageView
                 android:layout_width="50dp"
@@ -29,7 +29,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.6">
+            android:layout_weight="0.7">
 
             <TextView
                 android:layout_width="match_parent"
@@ -45,7 +45,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.3">
+            android:layout_weight="0.2">
 
             <ImageButton
                 android:id="@+id/helpTool"
@@ -61,7 +61,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.3">
+            android:layout_weight="0.2">
 
             <ImageButton
                 android:id="@+id/homeTool"
@@ -69,7 +69,7 @@
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/transparent"
-                android:contentDescription="@string/contentDescriptionToolbar"
+                android:contentDescription="@string/iconContentDescriptionToolBar"
                 android:scaleType="fitCenter"
                 android:src="@drawable/home" />
         </RelativeLayout>
