--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/words_bottom_bar.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/words_bottom_bar.xml
@@ -4,14 +4,15 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@drawable/secondary_grad"
+    style="@style/secondary_grad"
     android:elevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <RelativeLayout
             android:layout_width="0dp"
