--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/values/themes.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/values/themes.xml
@@ -1,9 +1,87 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Pass_Word" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.Pass_Word" parent="Theme.AppCompat.NoActionBar">
+
     </style>
 
-    <style name="Theme.Pass_Word" parent="Base.Theme.Pass_Word" />
+    <style name="back_correct_letter" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/back_correct_letter</item>
+    </style>
+
+    <style name="back_incorrect_letter" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/back_incorrect_letter</item>
+    </style>
+
+    <style name="back_item" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/back_item</item>
+    </style>
+
+    <style name="back_letter" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/back_letter</item>
+    </style>
+
+    <style name="back_secondary" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/back_secondary</item>
+    </style>
+
+    <style name="primary_grad" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/primary_grad</item>
+    </style>
+
+    <style name="radio_form" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/radio_form</item>
+        <item name="android:textColor">@color/primaryBlonded</item>
+        <item name="android:textSize">30sp</item>
+        <item name="fontFamily">@font/ubuntu_regular</item>
+        <item name="buttonTint">@color/primaryBlonded</item>
+    </style>
+
+    <style name="secondary_grad" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/secondary_grad</item>
+    </style>
+
+    <style name="tertiary_grad" parent="Theme.Pass_Word">
+        <item name="android:background">@drawable/tertiary_grad</item>
+    </style>
+
+    <style name="text_view_mainTitle">
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textColorHint">@color/textPrimary</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="fontFamily">@font/jetbrains_mono_thin</item>
+    </style>
+
+    <style name="text_view_popup_title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="fontFamily">@font/jetbrains_mono_thin</item>
+    </style>
+
+    <style name="text_view_secondTitle">
+        <item name="android:textColor">@color/tertiary</item>
+        <item name="android:textColorHint">@color/tertiary</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">casual</item>
+    </style>
+
+    <style name="text_view_extra">
+        <item name="android:textColor">@color/textSecondary</item>
+        <item name="android:textColorHint">@color/textSecondary</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="button" parent="back_letter">
+        <item name="android:width">300dp</item>
+        <item name="android:textColor">@color/primaryBlonded</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="edit_text" parent="text_view_secondTitle">
+        <item name="background">@drawable/edit_text_border</item>
+    </style>
 </resources>
